# Ariadne

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
ariadne_ltb/: __init__.py  agents.py  backlog.py  board.py  board_server.py  cli.py  daemon.py  defaults.py  demo.py  display_text.py  doctor.py  evidence.py  execution.py  failure.py  feishu.py  full_demo.py  git_utils.py  github_integration.py  handoffs.py  inbox.py  ingest.py  journal.py  landing_gate.py  llm.py  llm_agents.py  llm_backlog.py  llm_proof.py  local_safety.py  local_search.py  memory.py  models.py  next_tickets.py  orchestrator.py  permissions.py  planner.py  planner_quality.py  product_closure.py  prompt_guard.py  retry.py  review.py  (+10 more)
docs/: RELEASE_PLAN.md  development_report.md  real_codex_smoke_test.md
examples/: multica_research_note.md
scripts/: verify_dogfood_browser.sh  verify_dogfood_result_packet.py  verify_v1.sh  verify_workbench.sh
templates/: BUILD_TICKET_TEMPLATE.md  CODEX_HANDOFF_TEMPLATE.md  FEISHU_WRITE_PLAN_TEMPLATE.md  REVIEW_REPORT_TEMPLATE.md
tests/: helpers.py  test_1_0_full_demo.py  test_agent_definition_store.py  test_agent_teammate_mode.py  test_application_idempotency.py  test_assign_ticket_service.py  test_assignment_claim_lease.py  test_assignment_claim_state_machine.py  test_assignment_timeline.py  test_backend_smoke_cli.py  test_backlog_preview_apply.py  test_backlog_update_loop.py  test_cli.py  test_cli_product_defaults.py  test_comments_service.py  test_compile_graph.py  test_control_plane_http.py  test_display_text.py  test_evidence_projection.py  test_failure_pipeline.py  test_feishu_real_write_gate.py  test_frontend_api_contract_static.py  test_frontend_control_plane_e2e.py  test_git_utils.py  test_github_integration.py  test_handoff_packet_readiness.py  test_http_contract_rejects_dangerous_fields.py  test_inbox.py  test_ingest_graph.py  test_issue_factory_compiler.py  (+60 more)
(+429 files in other folders)
